--- a/firmware/PID_STM32F1/.project
+++ b/firmware/PID_STM32F1/.project
@@ -28,7 +28,7 @@
 		<link>
 			<name>pid_lib</name>
 			<type>2</type>
-			<locationURI>PID_LIB_PATH</locationURI>
+			<locationURI>PARENT-1-PROJECT_LOC/lib/pid_lib</locationURI>
 		</link>
 	</linkedResources>
 	<variableList>
