links para projeto STM32F4

--- a/firmware/PID_STM32F4/Debug/makefile
+++ b/firmware/PID_STM32F4/Debug/makefile
@@ -9,9 +9,9 @@ RM := rm -rf
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include startup/subdir.mk
+-include pid_lib/qn_lib/subdir.mk
+-include pid_lib/subdir.mk
 -include Src/subdir.mk
--include Inc/qn_lib/subdir.mk
--include Inc/pid_lib/subdir.mk
 -include Drivers/STM32F4xx_HAL_Driver/Src/subdir.mk
 -include subdir.mk
 -include objects.mk
