--- a/firmware/PID_STM32F4/.project
+++ b/firmware/PID_STM32F4/.project
@@ -24,6 +24,13 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 		<nature>fr.ac6.mcu.ide.core.MCUProjectNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>pid_lib</name>
+			<type>2</type>
+			<locationURI>PARENT-1-PROJECT_LOC/lib/pid_lib</locationURI>
+		</link>
+	</linkedResources>
 	<variableList>
 		<variable>
 			<name>PID_LIB_PATH</name>
