link folders MSP430

--- a/firmware/PID_MSP430/.cproject
+++ b/firmware/PID_MSP430/.cproject
@@ -43,8 +43,8 @@
 								<option id="com.ti.ccstudio.buildDefinitions.MSP430_18.1.compilerID.DIAG_WRAP.1596582974" name="Wrap diagnostic messages (--diag_wrap)" superClass="com.ti.ccstudio.buildDefinitions.MSP430_18.1.compilerID.DIAG_WRAP" useByScannerDiscovery="false" value="com.ti.ccstudio.buildDefinitions.MSP430_18.1.compilerID.DIAG_WRAP.off" valueType="enumerated"/>
 								<option id="com.ti.ccstudio.buildDefinitions.MSP430_18.1.compilerID.INCLUDE_PATH.1159964864" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.MSP430_18.1.compilerID.INCLUDE_PATH" valueType="includePath">
 									<listOptionValue builtIn="false" value="${CCS_BASE_ROOT}/msp430/include"/>
-									<listOptionValue builtIn="false" value="${PID_LIB_PATH}/qn_lib"/>
-									<listOptionValue builtIn="false" value="${PID_LIB_PATH}"/>
+									<listOptionValue builtIn="false" value="${PROJECT_LOC}\..\lib\pid_lib\qn_lib"/>
+									<listOptionValue builtIn="false" value="${PROJECT_LOC}\..\lib\pid_lib"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}"/>
 									<listOptionValue builtIn="false" value="${CG_TOOL_ROOT}/include"/>
 								</option>
