--- a/firmware/PID_MSP430/.settings/org.eclipse.core.resources.prefs
+++ b/firmware/PID_MSP430/.settings/org.eclipse.core.resources.prefs
@@ -8,3 +8,12 @@ encoding//Debug/pid_lib/subdir_vars.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
 encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
+encoding//Release/makefile=UTF-8
+encoding//Release/objects.mk=UTF-8
+encoding//Release/pid_lib/qn_lib/subdir_rules.mk=UTF-8
+encoding//Release/pid_lib/qn_lib/subdir_vars.mk=UTF-8
+encoding//Release/pid_lib/subdir_rules.mk=UTF-8
+encoding//Release/pid_lib/subdir_vars.mk=UTF-8
+encoding//Release/sources.mk=UTF-8
+encoding//Release/subdir_rules.mk=UTF-8
+encoding//Release/subdir_vars.mk=UTF-8
