--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 firmware/PID_STM32F1_V3
 firmware/PID_ESP32_V3
 firmware/*.o
-firmware/*/Debug
-firmware/*/Release
+firmware/*.o
+firmware/**/Debug
+firmware/**/Release
